--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #CFD8DC;
+  background-color: #EEE;
 }
